# main.cpp

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/: logo.xcf
include/maincpp/: math.hpp
src/: main.cpp
src/maincpp/: math.cpp
test/maincpp/: test_math.cpp
